<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/template_url"
        android:padding="@dimen/material_grid_2x"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_video">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>