...
            android:backgroundTint="@color/offWhite"
            android:drawableStart="@drawable/ic_download"
            android:drawablePadding="@dimen/material_grid_1x"
            android:text="@string/text_download"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonDelete" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
...
